fix dark mode/list influencer

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -41,7 +41,7 @@ form{
 .signup{
     margin-top: 1rem;
    
-    span{
+    ion-text{
         display: flex;
         align-items: center;
     }
