--- a/src/global.scss
+++ b/src/global.scss
@@ -104,6 +104,11 @@ ion-card {
   padding: 0 0px 24px 15px !important;
 }
 
+span{
+  color: rgb(31, 30, 30);
+}
+
+
 .mat-step-icon-content,
 .mat-step-icon .mat-icon {
   span {
